# nepsis-cgn

./: .gitignore  .pre-commit-config.yaml  .vercelignore  AGENTS.md  IMPLEMENT.md  LICENSE  PLAN.md  README.md  SECURITY.md  STATUS.md  pyproject.toml  render.yaml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
api/: index.py
briefs/: 2025-01-15.md  2026-03-10_engine_adversarial_gate_expected.json  2026-03-10_engine_adversarial_qa_runbook.md  2026-03-10_internal_thread_recap.md  2026-03-11_engine_adversarial_qa_report.md  nepsis_cgn_v0.1_brief.md  nepsis_governance_spec_v1.md
data/arc/: mock_today.json  submission.json
data/manifests/: manifest_definitions.yaml
data/private_demo_cases/: authority_suppressed_red_channel.json
docs/: canonical-operator-run-contract.md  codex-local-mcp-demo.md  governance-profile-contract.md  handoff.md  hosted-mcp-codex.md  local-mcp-harness.md  operator-runbook.md  packet-provenance.md  public-api.md  red-authority-contract.md  runtime-matrix.md  v3-orchestration-kernel.md
interop/: README.md  contract-manifest.json
interop/golden/: nepsis.interop_bundle@0.2.0.json
interop/policies/: nepsis.canonical_actualization_policy@0.1.0.json  nepsis.operator_disposition_policy@0.1.0.json
interop/schemas/: nepsis.action_receipt@0.1.0.schema.json  nepsis.action_receipt_trust_anchor@0.1.0.schema.json  nepsis.action_receipt_trust_anchor_lifecycle_event@0.1.0.schema.json  nepsis.action_request@0.1.0.schema.json  nepsis.canonical_run@0.1.0.schema.json  nepsis.canonical_run_artifact@0.1.0.schema.json  nepsis.canonical_run_event@0.1.0.schema.json  nepsis.canonical_run_protected_export@0.1.0.schema.json  nepsis.context_manifest@0.1.0.schema.json  nepsis.external_codex_ref@0.1.0.schema.json  nepsis.import_receipt@0.1.0.schema.json  (+10 more)
nepsis-web/: .env.example  .env.operator.example  .env.public.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  playwright.auth.config.ts  playwright.config.ts  playwright.hosted-auth.config.ts  tailwind.config.ts
scripts/: api-smoke.sh  check_openai_secrets.py  codex-mcp-demo.sh  engine_adversarial_gate_snapshot.py  engine_adversarial_qa_verify.py  mcp-hosted-verify.py  mcp-local-verify.py  mvp-local.sh  operator-local.sh  run_arc_bench.py  run_private_demo_benchmark.py  site-smoke.sh  smoke.sh
tests/: test_action_receipts.py  test_arc_attach_manifold.py  test_canonical_actualization.py  test_canonical_operator_contracts.py  test_canonical_run_contract.py  test_canonical_run_export_verifier.py  test_canonical_run_private_api.py  test_canonical_run_service.py  test_canonical_run_store.py  test_case_reasoning_compiler.py  test_cli_main.py  test_convergence.py  test_deviance_monitor.py  test_engine_api_asgi_public.py  test_engine_api_provenance.py  test_engine_api_server.py  test_engine_api_service.py  test_expression_constraints.py  test_governance.py  test_gravity_room_manifold.py  test_import_pilot.py  test_interop_bundle_verifier.py  test_local_mvp_launcher.py  test_markdown_reconstruct.py  test_mcp_handler.py  test_mcp_hosted_verify.py  test_mcp_local_harness.py  test_mcp_stdio.py  test_mvp_packet.py  test_navigation_packet.py  test_neutral_canonical_json.py  test_openai_secret_hygiene.py  test_operator_disposition_adapter.py  test_operator_governance_profile_contract.py  test_operator_packet.py  test_packet_provenance.py  test_private_demo_benchmark.py  test_private_demo_runtime.py  test_private_runtime.py  test_private_runtime_init.py  (+14 more)
(+267 files in other folders)
