[build-system]
requires = ["setuptools>=58.0.4"]
build-backend = "setuptools.build_meta"

[project]
name = "nepsis-cgn"
version = "0.0.1"
description = "Nepsis Constraint Geometry Navigation (NepsisCGN) – interpretant-aware constraint solver."
authors = [{ name = "Trent Thorn" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pyyaml"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
]
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
    "cryptography>=42.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
nepsiscgn = "nepsis_cgn.cli.main:entrypoint"
nepsiscgn-api = "nepsis_cgn.api.server:entrypoint"
nepsiscgn-api-asgi = "nepsis_cgn.api.asgi:entrypoint"
