[build-system]
requires = ["setuptools>=58.0.4"]
build-backend = "setuptools.build_meta"

[project]
name = "nepsis-cgn"
version = "0.3.0"
description = "Nepsis Constraint Geometry Navigation (NepsisCGN) – interpretant-aware constraint solver."
authors = [{ name = "Trent Thorn" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0.0",
    "fastapi>=0.110.0",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jsonschema>=4.22.0",
    "black",
    "ruff",
    "mypy",
]
api = [
    "httpx2>=2.3.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
nepsiscgn = "nepsis_cgn.cli.main:entrypoint"
nepsiscgn-api = "nepsis_cgn.api.server:entrypoint"
nepsiscgn-api-asgi = "nepsis_cgn.api.asgi:entrypoint"
nepsiscgn-mcp = "nepsis_cgn.mcp.stdio:entrypoint"
nepsiscgn-private-runs = "nepsis_cgn.canonical_runs.private_runtime:main"
nepsiscgn-init-private-runs = "nepsis_cgn.canonical_runs.private_runtime_init:main"
nepsiscgn-revoke-receipt-anchor = "nepsis_cgn.canonical_runs.trust_anchor_registry:main"

[tool.vercel]
entrypoint = "app:app"
