[metadata]
name = nepsis-cgn
version = 0.0.1
description = Nepsis Constraint Geometry Navigation (NepsisCGN) – interpretant-aware constraint solver.
long_description = file: README.md
long_description_content_type = text/markdown
author = Trent Thorn
python_requires = >=3.11

[options]
package_dir =
    = src
packages = find:
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    black
    ruff
    mypy
